<resources>
    <string name="app_name">HDI</string>
    <string name="hdi_about">The Human Development index is a measure of economic development and economic welfare.
The HDI examines life expectancy, education and income levels and uses this to create an overall score between 0 and 1</string>
    <string name="title_activity_map">Map</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="loading">Loading…</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="or">OR</string>
    <string name="guest_login">GUEST LOGIN</string>
    <string name="onAuthStateChanges_signed_in">onAuthStateChanged:signed_in:</string>
    <string name="onAuthStateChanges_sign_out">onAuthStateChanged:signed_out</string>
    <string name="signInAnonym_complete">signInAnonymously:onComplete:</string>
    <string name="signInAnonym">signInAnonymously</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="login_mode" translatable="false">LOGIN_MODE</string>
    <string name="firebase_google">firebaseAuthWithGoogle:</string>
    <string name="signInWithCredential_complete">signInWithCredential:onComplete:</string>
    <string name="signInWithCredential">signInWithCredential</string>
    <string name="connection_failed">onConnectionFailed:</string>
    <string name="google_play_error">Google Play Services error.</string>
    <string name="required">Required.</string>
    <string name="createAccount">createAccount:</string>
    <string name="createUserWithEmail_complete">createUserWithEmail:onComplete:</string>
    <string name="signEmail_failed">signInWithEmail:failed</string>
    <string name="signEmail_complete">signInWithEmail:onComplete:</string>
    <string name="privacy1Head">Types of Data collected</string>
    <string name="privacy1">Among the types of Personal Data that this Application collects, by itself or through third parties, there are: Cookies, Usage Data, Precise location permission (non-continuous) and Approximate location permission (non-continuous).
Other Personal Data collected may be described in other sections of this privacy policy or by dedicated explanation text contextually with the Data collection.
The Personal Data may be freely provided by the User, or collected automatically when using this Application.
Any use of Cookies - or of other tracking tools - by this Application or by the owners of third party services used by this Application, unless stated otherwise, serves to identify Users and remember their preferences, for the sole purpose of providing the service required by the User.
Failure to provide certain Personal Data may make it impossible for this Application to provide its services.
Users are responsible for any Personal Data of third parties obtained, published or shared through this Application and confirm that they have the third partys consent to provide the Data to the Owner.</string>

    <string name="privacy2Head">Methods of processing
</string>
    <string name="privacy2">The Data Controller processes the Data of Users in a proper manner and shall take appropriate security measures to prevent unauthorized access, disclosure, modification, or unauthorized destruction of the Data.
The Data processing is carried out using computers and/or IT enabled tools, following organizational procedures and modes strictly related to the purposes indicated. In addition to the Data Controller, in some cases, the Data may be accessible to certain types of persons in charge, involved with the operation of the site (administration, sales, marketing, legal, system administration) or external parties (such as third party technical service providers, mail carriers, hosting providers, IT companies, communications agencies) appointed, if necessary, as Data Processors by the Owner. The updated list of these parties may be requested from the Data Controller at any time.
</string>


    <string name="privacy3Head">Place</string>
    <string name="privacy3">The Data is processed at the Data Controllers operating offices and in any other places where the parties involved with the processing are located. For further information, please contact the Data Controller.
</string>


    <string name="privacy4Head">Retention time</string>
    <string name="privacy4">The Data is kept for the time necessary to provide the service requested by the User, or stated by the purposes outlined in this document, and the User can always request that the Data Controller suspend or remove the data.</string>


    <string name="privacy5Head">The use of the collected Data</string>
    <string name="privacy5">The Data concerning the User is collected to allow the Owner to provide its services, as well as for the following purposes: Analytics, Device permissions for Personal Data access and Registration and authentication.
The Personal Data used for each purpose is outlined in the specific sections of this document.
</string>


    <string name="privacy6Head">Device permissions for Personal Data access</string>
    <string name="privacy6">This Application requests certain permissions from Users that allow it to access the Users device Data as described below.
By default, these permissions must be granted by the User before the respective information can be accessed. Once the permission has been given, it can be revoked by the User at any time. In order to revoke these permissions, Users may refer to the device settings or contact the Owner for support at the contact details provided in the present document.
The exact procedure for controlling app permissions may be dependent on the Users device and software.
Please note that the revoking of such permissions might impact the proper functioning of this Application.
If User grants any of the permissions listed below, these respective Personal Data may be processed (i.e accessed to, modified or removed) by this Application.</string>


    <string name="privacy7Head">Approximate location permission (non-continuous)</string>
    <string name="privacy7">Used for accessing the Users approximate device location. This Application may collect, use, and share User location Data in order to provide location-based services.
The geographic location of the User is determined in a manner that isnt continuous. This means that it is impossible for this Application to derive the approximate position of the User on a continuous basis.
</string>


    <string name="privacy8Head">Precise location permission (non-continuous)
</string>
    <string name="privacy8">Used for accessing the Users precise device location. This Application may collect, use, and share User location Data in order to provide location-based services.
The geographic location of the User is determined in a manner that isnt continuous. This means that it is impossible for this Application to derive the exact position of the User on a continuous basis.</string>


    <string name="privacy9Head">Additional information about Users Personal Data</string>
    <string name="privacy9">In addition to the information contained in this privacy policy, this Application may provide the User with additional and contextual information concerning particular services or the collection and processing of Personal Data upon request.</string>

    <string name="privacy10Head">System logs and maintenance</string>
    <string name="privacy10">For operation and maintenance purposes, this Application and any third party services may collect files that record interaction with this Application (System logs) or use for this purpose other Personal Data (such as IP Address).
</string>


    <string name="privacy11Head">Information not contained in this policy
</string>
    <string name="privacy11">More details concerning the collection or processing of Personal Data may be requested from the Data Controller at any time. Please see the contact information at the beginning of this document.
</string>


    <string name="privacy12Head">The rights of Users</string>
    <string name="privacy12">Users have the right, at any time, to know whether their Personal Data has been stored and can consult the Data Controller to learn about their contents and origin, to verify their accuracy or to ask for them to be supplemented, cancelled, updated or corrected, or for their transformation into anonymous format or to block any data held in violation of the law, as well as to oppose their treatment for any and all legitimate reasons. Requests should be sent to the Data Controller at the contact information set out above.
This Application does not support “Do Not Track” requests.
To determine whether any of the third party services it uses honor the “Do Not Track” requests, please read their privacy policies.
</string>

    <string name="privacy13Head">Changes to this privacy policy</string>
    <string name="privacy13">The Data Controller reserves the right to make changes to this privacy policy at any time by giving notice to its Users on this page. It is strongly recommended to check this page often, referring to the date of the last modification listed at the bottom. If a User objects to any of the changes to the Policy, the User must cease using this Application and can request that the Data Controller remove the Personal Data. Unless stated otherwise, the then-current privacy policy applies to all Personal Data the Data Controller has about Users.</string>


    <string name="privacy14Head">Information about this privacy policy</string>
    <string name="privacy14">The Data Controller is responsible for this privacy policy, prepared starting from the modules provided by Iubenda </string>


</resources>
