<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy1Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy1"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy2Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy2"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy3Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy3"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy4Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy4"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy5Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy5"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy6Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy6"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy7Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy7"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy8Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy8"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy9Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy9"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy10Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy10"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy11Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy11"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy12Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy12"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy13Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy13"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy14Head"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/privacy14"
            android:textAppearance="?android:textAppearanceMedium" />


    </LinearLayout>
</ScrollView>